<resources>
    <string name="app_name">Murvel</string>
    <string name="nav_header_title">Login for better experience</string>
    <string name="nav_header_subtitle">Click here to log in</string>
    <string name="action_settings">Preferences</string>

    <string name="menu_home">Home</string>
    <string name="menu_characters">Characters</string>
    <string name="menu_series">Series</string>
    <string name="detailed_page_bio_text">This text is a placeholder and if you see this then it means something has gone terribly wrong. \n\n You are not supposed to be able to view a detailed page detailing nothing in particular. \n\nPlease report this bug to Daniel and he will fix it ASAP. \n\n\n LOREM IPSUM \n\nLOREM IPSUM\n\nThis text is a placeholder and if you see this then it means something has gone terribly wrong. \n\n You are not supposed to be able to view a detailed page detailing nothing in particular. \n\nPlease report this bug to Daniel and he will fix it ASAP.\n\nThis text is a placeholder and if you see this then it means something has gone terribly wrong. \n\n You are not supposed to be able to view a detailed page detailing nothing in particular. \n\nPlease report this bug to Daniel and he will fix it ASAP. \n\n\n LOREM IPSUM \n\nLOREM IPSUM\n\nThis text is a placeholder and if you see this then it means something has gone terribly wrong. \n\n You are not supposed to be able to view a detailed page detailing nothing in particular. \n\nPlease report this bug to Daniel and he will fix it ASAP. \n\n https://example.com \n\nEND OF MESSAGE</string>
    <string name="title_activity_details">DetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search_hint_character">Search for a character…</string>
    <string name="search_hint_series">Search for a series…</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="details_urls" />
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <string name="msg_token_fmt" translatable="false">InstanceId Token: %s</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id" />
    <string name="recommendations">Recommendations</string>
    <string name="your_recommendations">My Marvel recommendations:</string>
    <string name="log_out">Log Out</string>
    <string name="toast_logout">You have been logged out from Murvel</string>
    <string name="toast_log_in_prompt">Please log in first.</string>
    <string name="nav_header_desc">Murvel Logo</string>
    <string name="favorites_added">has been added to favorites</string>
    <string name="favorites_removed">has been removed from your favorites</string>
    <string name="series_character">See series from this character</string>
    <string name="send_friend">Send to friend</string>
    <string name="fav">favorite</string>
    <string name="marvel_image">marvel image</string>
    <string name="action_bar_title_characters">Characters</string>
    <string name="action_bar_title_series">Series</string>
    <string name="example_details">Test Text \n This is a test Text \n The End</string>
    <string name="returnButton">return</string>
    <string name="char_">Characters</string>
    <string name="ser_">Series</string>
    <string name="creators">Daniel | Magnus | David</string>
    <string name="search">search</string>
    <string name="copyleft">copyleft</string>
</resources>