<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_house_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_character"
            android:icon="@drawable/ic_baseline_emoji_people_24"
            android:title="@string/menu_characters" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/menu_series" />
        <item android:id="@+id/nav_reco"
            android:icon="@drawable/ic_baseline_mail_24"
            android:title="@string/recommendations"/>
    </group>
</menu>