<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="isthisstuff.practice.marvellisimohdd.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_character"
            app:destination="@id/nav_character" />
        <action
            android:id="@+id/action_nav_home_to_nav_series"
            app:destination="@id/nav_series" />
        <action
            android:id="@+id/action_nav_home_to_nav_reco"
            app:destination="@id/nav_reco" />
    </fragment>

    <fragment
        android:id="@+id/nav_character"
        android:name="isthisstuff.practice.marvellisimohdd.ui.search.SearchFragment"
        android:label="@string/menu_characters"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_series"
        android:name="isthisstuff.practice.marvellisimohdd.ui.search.SearchFragment"
        android:label="@string/menu_series"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_reco"
        android:name="isthisstuff.practice.marvellisimohdd.ui.recommendations.RecommendationsFragment"
        android:label="Recommendations"
        tools:layout="@layout/fragment_recommendations">
        <action
            android:id="@+id/action_nav_reco_to_nav_series"
            app:destination="@id/nav_series" />
    </fragment>
</navigation>