<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/primaryColor"
    android:id="@+id/splash_screen"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/marvelfont"
        android:textAlignment="center"
        android:textColor="@color/secondaryTextColor"
        android:textSize="140sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="92dp"
        android:text="@string/app_name"
        android:textAllCaps="true"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_home">

        <TextView
            android:id="@+id/home_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/marvelfont"
            android:gravity="center_horizontal"
            android:text="@string/char_"
            android:textAllCaps="true"
            android:textColor="@color/secondaryTextColor"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/home_series"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/marvelfont"
            android:text="@string/ser_"
            android:textAllCaps="true"
            android:textColor="@color/secondaryTextColor"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/home_characters"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/copyright"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>